--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -23,6 +23,6 @@
     background-size: cover;
   }
   .land_bg{
-    background-image:linear-gradient(to right,rgba(0,0,0,0.8),rgba(0,0,0,0.4)),url('hero.png');
+    background-image:linear-gradient(to right,rgba(0,0,0,0.8),rgba(0,0,0,0.4)),url('hero.bmp');
   }
   
